--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.9.1",
     "node-sass": "^4.13.0",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local-mongoose": "^5.0.1"
   }
 }
